<resources>
    <string name="app_name">hike.now</string>
    <string name="title">hike.now</string>
    <string name="e_mail">E-Mail</string>
    <string name="rememberme">Save login credentials</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="goto_register">Register new user</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_account">Account</string>
    <string name="title_browse">Browse Adventures</string>
    <string name="title_settings">Settings</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register">Register</string>
    <string name="reg_password">Password (min. 8 characters)</string>
    <string name="inprogress">Hi!\n This place will house all the wonderful features we plan to provide you in the future. We are working hard behind the scenes to bring these to you as soon as possible. While that happens, you can log out with the button below:</string>
    <string name="log_out">Log out</string>
    <string name="logout">Logout</string>
    <string name="history">Previous Trips</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="guestlogin">Login as Guest</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="delete_user">Delete User</string>
</resources>