<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/niki_clark_unsplash_launchscreen" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bai_jamjuree"
        android:text="@string/title"
        android:textColor="#AAFFFFFF"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="emailAddress"
        android:backgroundTint="@color/material_dynamic_neutral100"
        android:ems="10"
        android:fontFamily="@font/bai_jamjuree"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFFFF"
        android:textColorHint="#AAFFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="name"
        android:backgroundTint="@color/material_dynamic_neutral100"
        android:ems="10"
        android:fontFamily="@font/bai_jamjuree"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="#FFFFFFFF"
        android:textColorHint="#AAFFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.385"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="password"
        android:backgroundTint="@color/material_dynamic_neutral100"
        android:ems="10"
        android:fontFamily="@font/bai_jamjuree"
        android:hint="@string/reg_password"
        android:inputType="textPassword"
        android:textColor="#FFFFFFFF"
        android:textColorHint="#AAFFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTextRepeatPassword"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="password"
        android:backgroundTint="@color/material_dynamic_neutral100"
        android:ems="10"
        android:fontFamily="@font/bai_jamjuree"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:textColor="#FFFFFFFF"
        android:textColorHint="#AAFFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/regButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/bai_jamjuree"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="#246826"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:progressTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextRepeatPassword"
        app:layout_constraintVertical_bias="0.0"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>